fix: alignment for skills section title for smaller devices

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -219,6 +219,14 @@ h1, h2 {
   .skills {
     flex-direction: column;
   }
+
+  .skills-left {
+    text-align: center;
+    position: sticky;
+    top: 60px;
+    width: 100%;
+    backdrop-filter: blur(24px);
+  }
 }
 
 @media only screen and (max-width: 700px) {
